--- a/HvcNope/HvcNope.vcxproj
+++ b/HvcNope/HvcNope.vcxproj
@@ -104,6 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -127,11 +128,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ByteSignature.cpp" />
     <ClCompile Include="KernelBinary.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Resolves.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ByteSignature.h" />
     <ClInclude Include="CallFunction.h" />
     <ClInclude Include="Resolves.h" />
     <ClInclude Include="Globals.h" />
