--- a/HvcNope/HvcNope.vcxproj.filters
+++ b/HvcNope/HvcNope.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Resolves.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ByteSignature.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IKernelReadWrite.hpp">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CallFunction.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ByteSignature.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
