--- a/HvcNope/HvcNope.vcxproj.filters
+++ b/HvcNope/HvcNope.vcxproj.filters
@@ -27,9 +27,12 @@
     <ClCompile Include="ByteSignature.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Utils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="IKernelReadWrite.hpp">
+    <ClInclude Include="KernelReadWrite.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Types.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ByteSignature.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Truesight.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
