--- a/HvcNope/HvcNope.vcxproj
+++ b/HvcNope/HvcNope.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="ByteSignature.cpp" />
     <ClCompile Include="KernelBinary.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="PointerGenerator.cpp" />
     <ClCompile Include="Resolves.cpp" />
     <ClCompile Include="Utils.cpp" />
   </ItemGroup>
