--- a/Converter/Converter.vcxproj.filters
+++ b/Converter/Converter.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="KernelFunctionConsumer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="KernelFunctionConsumer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
