--- a/Converter/Converter.vcxproj
+++ b/Converter/Converter.vcxproj
@@ -145,10 +145,14 @@
   <ItemGroup>
     <ClCompile Include="KernelFunctionConsumer.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="ReplaceIntrinisicsConsumer.cpp" />
+    <ClCompile Include="Utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="KernelFunctionConsumer.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="ReplaceIntrinisicsConsumer.h" />
+    <ClInclude Include="Utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
