--- a/HvcNope/HvcNope.vcxproj.filters
+++ b/HvcNope/HvcNope.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="MockDriver.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Intrinsics.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="KernelReadWrite.h">
@@ -81,6 +84,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MockDriver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Intrinsics.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
