--- a/HvcNope/HvcNope.vcxproj
+++ b/HvcNope/HvcNope.vcxproj
@@ -130,6 +130,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ByteSignature.cpp" />
+    <ClCompile Include="Hvcnope.cpp" />
     <ClCompile Include="Intrinsics.cpp" />
     <ClCompile Include="KernelBinary.cpp" />
     <ClCompile Include="Log.cpp" />
@@ -142,6 +143,7 @@
   <ItemGroup>
     <ClInclude Include="ByteSignature.h" />
     <ClInclude Include="CallFunction.h" />
+    <ClInclude Include="Hvcnope.h" />
     <ClInclude Include="Intrinsics.h" />
     <ClInclude Include="MockDriver.h" />
     <ClInclude Include="Nt.h" />
