--- a/HvcNope/HvcNope.vcxproj.filters
+++ b/HvcNope/HvcNope.vcxproj.filters
@@ -95,5 +95,8 @@
     <ClInclude Include="Hvcnope.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="KernelPtr.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
