Removed clang-style attributes from coverted sources for MSVC comapatibility

--- a/Converter/Converter.vcxproj.filters
+++ b/Converter/Converter.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="ToolConfiguration.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="OutputAction.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -45,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ToolConfiguration.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="OutputAction.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
