--- a/Converter/Converter.vcxproj
+++ b/Converter/Converter.vcxproj
@@ -143,6 +143,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="OutputAction.cpp" />
     <ClCompile Include="ToolConfiguration.cpp" />
     <ClCompile Include="KernelFunctionConsumer.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -150,6 +151,7 @@
     <ClCompile Include="Utils.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="OutputAction.h" />
     <ClInclude Include="ToolConfiguration.h" />
     <ClInclude Include="KernelFunctionConsumer.h" />
     <ClInclude Include="pch.h" />
